Db changed and test setup completed
